src/App.css
/*
 * APP 
 */

.app {
    display: flex;
    flex-direction: row;
    overflow-y: auto;
}


/*
 * NAV
 */

.nav__container {
  position: absolute;
  z-index: 100;
  top: 0.625rem;

  width: 100%;
  list-style: none;
  display: flex;
  justify-content: center;
}

.nav {
  text-align: center;
}

.nav__btn:hover {
    margin: 0.125rem 0.125rem 0.125rem 0;
    padding: 0.375rem;
    font-size: 0.875rem;
    color: #fff;
    background: #034685;
    border-radius: 0.125rem;
    box-shadow: 0.063rem 0.063rem 0.188rem rgba(0, 0, 0, 0.4);
    text-decoration: none;
    font-weight: 600;
    cursor: pointer;
    transform: scale(1.2);
}

.nav__btn {
    margin: 0.125rem 0.125rem 0.125rem 0;
    padding: 0.280rem;
    font-size: 0.875rem;
    color: #fff;
    background: #034685;
    border-radius: 0.125rem;
    box-shadow: 0.063rem 0.063rem 0.188rem rgba(0, 0, 0, 0.4);
    text-decoration: none;
    font-weight: 600;
}


/*
 * HERO
 */

.hero {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  margin: 0 auto;
  padding: 0.938rem;
  height: 100vh;
  max-width: 22.5rem;
  background: #fafafa;
  text-align: center;
}


.hero {
  min-height: 120vh;
}

.hero__subheader {
    font-weight: 300;
    font-size: 1.563rem;
}

.style__summary {
    font-size: 1.063rem;
}

.style__phone {
    margin-top: 0.938rem;
}

.hero__link-container {
    margin-top: 0.625rem;
}

.hero__text {
    margin: 0.625rem 0;
    font-weight: 700;
}

.hero__logo {
    height: 3.125rem;
    vertical-align: middle;
    animation: hero-logo infinite 3s linear;
    margin-left: 1.25rem;
    margin-top: 0.625rem;
}

.github__logo {
    color: black;
}

.github__logo:hover {
    color: black;
    background: white;
    cursor: pointer;
    transform: scale(1.2);
}

.logo__container {
  margin-top: 1.875rem;
  display: flex;
  justify-content: space-around;
  width: 7.75rem;
  margin-right: 2.438rem;
  cursor: pointer;
  transform: scale(1.2);
}

.image__profile {
  max-width: 47%;
  border-radius: 50%;
  margin: 1rem;
  border: 0.188rem solid #999999;
}

@media screen and (max-width:20rem) {
    .image__profile {
        display: none;
    }
}

@media screen and (max-width:23.438) {
    .image__profile {
        max-width: 40%;
    }
}

@media screen and (max-width:26.563) {
    .image__profile {
        max-width: 40%;
    }
}

@keyframes hero-logo {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

@keyframes hero-arrow {
    from {
        opacity: 0.25;
        transform: scale3d(1, 1, 1);
    }
    50% {
        opacity: 1;
        transform: scale3d(1.15, 1.15, 1.15);
    }
    to {
        opacity: 0.25;
        transform: scale3d(1, 1, 1);
    }
}


/*
 * CARD
 */

.card__content {
    width: 100%;
    display: flex;
    flex-direction: column;
}


/*
 * JOB
 */

.job__container {
    display: flex;
    justify-content: center;
    padding: 3.125rem;
    align-items: flex-start;
    flex-direction: column;
    flex: 1;
    width: 100%;
    color: #fafafa;
    background: #54e7c7;
}

.job__secondcontainer {
    margin-top: 0.875rem;
}

.job__date {
    font-size: 0.875rem;
    font-weight: 300;
}

.job__paragraph {
    font-style: italic;
}

.job__list {
    margin: 0.625rem;
}

.job__header {
    margin: 0.938rem 0rem;
}


/*
 * SKILLS
 */

.skill {
    margin: 0.125rem 0.25rem 0.125rem 0;
    color: #fff;
    padding: 0.5rem;
    box-shadow: 0.063rem 0.063rem 0.188rem rgba(0, 0, 0, 0.4);
    border-radius: 0.125rem;
    background: #3e6e98;
    font-weight: 600
}

.skills-list__header {
    color: #4a4a4a;
    text-align: center;
    font-size: 2.188rem;
}

.skills-list {
    display: flex;
    flex-flow: row wrap;
    list-style: none;
}


/*
 * EDUCATION
 */

.education__header {
    color: #4a4a4a;
    text-align: center;
}

.education__text {
    text-align: center;
}

.education__subheader {
    margin-bottom: 1.25rem;
    font-size: 1.25rem;
}

.education__area {
    font-size: 1.25rem;
    margin-top: 0.625rem;
}

.education__graduated {
    font-size: 1.25rem;
    margin-top: 0.625rem;
}


/*
 * CONTACT
 */

.contact__header {
    color: #4a4a4a;
}

.contact__container {
    margin-top: 0.625rem;
}


/*
 * CONTAINERS
 *
 * card
 * skills-list
 * contact
 * education
 */

.card__container {
    width: 60%;
}

.skills-list__container,
.contact__container,
.education__container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}


/*
 * HEADERS
 *
 * hero
 * skills-list
 * education
 * contact
 */

.hero__header,
.contact__header,
.education__header,
.skills-list__header {
    margin-bottom: 1.25rem;
}

@media (max-width: 61.875rem) {
    /*
   * APP 
   */
    .app {
        flex-direction: column;
    }
    /*
   * CONTAINERS
   *
   * card
   * skills-list
   * education 
   * contact 
   */
    .card__container {
        width: 100vw;
    }
    .skills-list__container,
    .education__container,
    .contact__container {
        display: none;
        position: fixed;
        z-index: 1;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        overflow: auto;
        background-color: rgb(0, 0, 0);
        background-color: rgba(0, 0, 0, 0.4);
    }
    /*
   * MODALS
   *
   * skills-list
   * education 
   * contact 
   */
    .skills-list__modal,
    .education__modal,
    .contact__modal {
        background-color: #fefefe;
        margin: 0 auto;
        padding: 1.25rem;
        width: calc(100% - 2.5rem);
    }
}

@media (min-width: 61.938rem) {
  .nav {
    position: absolute;
    left: calc(20% - 8.125rem);
    text-align: left;
  }

  .hero {
    width: 40%;
    height: 100vh;
  }



  .card__container {
    height: 100vh;
    overflow: auto;
  }

  .card__content {
    min-height: 100vh;
    overflow-y: auto;
  }

  /*
   * CONTAINERS
   *
   * skills-list
   * education 
   * contact 
   */
    .contact__container,
    .education__container,
    .skills-list__container {
        width: 60%;
    }
}

@media only screen and (orientation: landscape) {
    .nav__container {
        display: none;
    }
}

@media only screen and (orientation: landscape) and (min-width: 51.25rem) {
    .nav__container {
        display: block;
    }
}

